--- a/CSS/MediaQ.scss
+++ b/CSS/MediaQ.scss
@@ -5,7 +5,6 @@
           //zoom: 50%;
           #wall{
                display: none;
-
           }
           #wall.active{
                overflow-y: hidden;
@@ -65,7 +64,7 @@
                }
                ul{
                     margin-top: 1em;
-                    margin-left: -2em;                    
+                    margin-left: -1em;                    
                    
                     li{
                          display: block;
@@ -82,6 +81,11 @@
                
                
           }
+
+
+          
+
+
           .hamburgerContainer{
                position: absolute;
                width: 5em;
@@ -90,17 +94,20 @@
                z-index: 2;
 
                .hamburger{
-                width: 3.5em;
-                height: .5em;
-                background-color: whitesmoke;
-                margin: 10% 0;
-                margin-left: auto;
-                margin-right: auto;
+                    width: 3.5em;
+                    height: .5em;
+                    background-color: whitesmoke;
+                    margin: 10% 0;
+                    margin-left: auto;
+                    margin-right: auto;
                }
           }
+
+
           .hamburger.active{
                background-color: rgb(0, 0, 0);
           }
+
           .headerFooter{
                flex-direction: column;
                button{
@@ -172,7 +179,7 @@
                -ms-transition: none !important; 
                transition: none !important; 
                animation: none;
-          }
+          }    
      }      
      
      footer{
@@ -181,10 +188,69 @@
      
      iframe{
           width: 300px;
+     }  
+     @keyframes ham1Anim {
+          
+          100%{
+               transform: translateY(15px) rotate(-55deg) scale(.8);
+               border-radius: 2em;
+               transition: ease-in-out;    
+          }
+     }
+
+     @keyframes ham2Anim {
+          100%{
+               opacity: 0;
+               transform: translateX(50px);
+               transition: ease-in-out;     
+          }
+     }
+     @keyframes ham3Anim {
+          100%{
+               transform: translateY(-15px) rotate(55deg) scale(.8);
+               border-radius: 2em;
+               transition: ease-in-out;    
+          }
+     }
+
+
+     #ham1.crossAnim{
+          animation-name: ham1Anim;
+          animation-duration: .5s; 
+          transition: ease-in-out;
+          animation-iteration-count: 1;
+          animation-fill-mode: forwards;
+     }
+     #ham2.crossAnim{
+          animation-name: ham2Anim;
+          animation-duration: .15s; 
+          transition: ease-in-out;
+          animation-iteration-count: 1;
+          animation-fill-mode: forwards;
+
+     }
+     #ham3.crossAnim{
+          animation-name: ham3Anim;
+          animation-duration: .5s; 
+          transition: ease-in-out;
+          animation-iteration-count: 1;
+          animation-fill-mode: forwards;
+
      }
      
-
 }
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
