--- a/CSS/MediaQ.css
+++ b/CSS/MediaQ.css
@@ -49,7 +49,7 @@
     background-image: url(../IMAGES/hero-mobile.jpg);
     background-size: 100% 73%;
   }
-  header h1 {
+  header h1, header .h1 {
     padding-bottom: 16%;
     font-size: 4em;
   }
